--- a/assets/styles/range.css
+++ b/assets/styles/range.css
@@ -1,183 +1,1 @@
-/* Generated with http://danielstern.ca/range.css/#/ to run slider in every navigators*/
-/************
-VOLUME SLIDER
-************/
-
-.volumeBar input[type=range] {
-  -webkit-appearance: none;
-  width: 100%;
-  margin: 11px 0;
-  background: none;
-}
-.volumeBar input[type=range]:focus {
-  outline: none;
-}
-.volumeBar input[type=range]::-webkit-slider-runnable-track {
-  width: 100%;
-  height: 2.8px;
-  cursor: grab;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5), 0px 0px 1px rgba(13, 13, 13, 0.5);
-  background: #ad2618;
-  border-radius: 25px;
-  border: 0px solid #010101;
-}
-.volumeBar input[type=range]::-webkit-slider-thumb {
-  box-shadow: 0px 0px 6px #000000, 0px 0px 0px #0d0d0d;
-  border: 0.2px solid #000000;
-  height: 25px;
-  width: 7px;
-  border-radius: 50px;
-  background: #efd36b;
-  cursor: grab;
-  -webkit-appearance: none;
-  margin-top: -11.1px;
-}
-.volumeBar input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #de311f;
-}
-.volumeBar input[type=range]::-moz-range-track {
-  width: 100%;
-  height: 2.8px;
-  cursor: grab;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5), 0px 0px 1px rgba(13, 13, 13, 0.5);
-  background: #ad2618;
-  border-radius: 25px;
-  border: 0px solid #010101;
-}
-.volumeBar input[type=range]::-moz-range-thumb {
-  box-shadow: 0px 0px 6px #000000, 0px 0px 0px #0d0d0d;
-  border: 0.2px solid #000000;
-  height: 25px;
-  width: 7px;
-  border-radius: 50px;
-  background: #efd36b;
-  cursor: grab;
-}
-.volumeBar input[type=range]::-ms-track {
-  width: 100%;
-  height: 2.8px;
-  cursor: grab;
-  background: transparent;
-  border-color: transparent;
-  color: transparent;
-}
-.volumeBar input[type=range]::-ms-fill-lower {
-  background: #7c1b11;
-  border: 0px solid #010101;
-  border-radius: 50px;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5), 0px 0px 1px rgba(13, 13, 13, 0.5);
-}
-.volumeBar input[type=range]::-ms-fill-upper {
-  background: #ad2618;
-  border: 0px solid #010101;
-  border-radius: 50px;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5), 0px 0px 1px rgba(13, 13, 13, 0.5);
-}
-.volumeBar input[type=range]::-ms-thumb {
-  box-shadow: 0px 0px 6px #000000, 0px 0px 0px #0d0d0d;
-  border: 0.2px solid #000000;
-  height: 25px;
-  width: 7px;
-  border-radius: 50px;
-  background: #efd36b;
-  cursor: grab;
-  height: 2.8px;
-}
-.volumeBar input[type=range]:focus::-ms-fill-lower {
-  background: #ad2618;
-}
-.volumeBar input[type=range]:focus::-ms-fill-upper {
-  background: #de311f;
-}
-
-/*************
-SEEKBAR SLIDER
-*************/
-
-.seekBar input[type=range] {
-  -webkit-appearance: none;
-  width: 99%;
-  padding-bottom: 10px;
-  display: flex;
-  background: none;
-}
-.seekBar input[type=range]:focus {
-  outline: none;
-}
-.seekBar input[type=range]::-webkit-slider-runnable-track {
-  width: 100%;
-  height: 1.3px;
-  cursor: pointer;
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-  background: linear-gradient(90deg, rgba(178,254,250,0.8) 0%, rgba(14,210,247,1) 100%);
-  border-radius: 25px;
-  border: 0px solid rgba(1, 1, 1, 0);
-}
-.seekBar input[type=range]::-webkit-slider-thumb {
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.44), 0px 0px 1px rgba(13, 13, 13, 0.44);
-  border: 0px solid rgba(0, 0, 0, 0);
-  height: 7px;
-  width: 7px;
-  border-radius: 50px;
-  background: #efd36b;
-  cursor: pointer;
-  -webkit-appearance: none;
-  margin-top: -2.85px;
-}
-.seekBar input[type=range]:focus::-webkit-slider-runnable-track {
-  background: linear-gradient(90deg, rgba(178,254,250,0.8) 0%, rgba(14,210,247,1) 100%);
-}
-.seekBar input[type=range]::-moz-range-track {
-  width: 100%;
-  height: 1.3px;
-  cursor: pointer;
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-  background: #d12e1d;
-  border-radius: 25px;
-  border: 0px solid rgba(1, 1, 1, 0);
-}
-.seekBar input[type=range]::-moz-range-thumb {
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.44), 0px 0px 1px rgba(13, 13, 13, 0.44);
-  border: 0px solid rgba(0, 0, 0, 0);
-  height: 7px;
-  width: 7px;
-  border-radius: 50px;
-  background: #efd36b;
-  cursor: pointer;
-}
-.seekBar input[type=range]::-ms-track {
-  width: 100%;
-  height: 1.3px;
-  cursor: pointer;
-  background: transparent;
-  border-color: transparent;
-  color: transparent;
-}
-.seekBar input[type=range]::-ms-fill-lower {
-  background: #270805;
-  border: 0px solid rgba(1, 1, 1, 0);
-  border-radius: 50px;
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-}
-.seekBar input[type=range]::-ms-fill-upper {
-  background: #d12e1d;
-  border: 0px solid rgba(1, 1, 1, 0);
-  border-radius: 50px;
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-}
-.seekBar input[type=range]::-ms-thumb {
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.44), 0px 0px 1px rgba(13, 13, 13, 0.44);
-  border: 0px solid rgba(0, 0, 0, 0);
-  height: 7px;
-  width: 7px;
-  border-radius: 50px;
-  background: #efd36b;
-  cursor: pointer;
-  height: 1.3px;
-}
-.seekBar input[type=range]:focus::-ms-fill-lower {
-  background: #d12e1d;
-}
-.seekBar input[type=range]:focus::-ms-fill-upper {
-  background: #d12e1d;
-}
+.volumeBar input[type=range]{-webkit-appearance:none;width:100%;margin:11px 0;background:none}.volumeBar input[type=range]:focus{outline:none}.volumeBar input[type=range]::-webkit-slider-runnable-track{width:100%;height:2.8px;cursor:grab;box-shadow:1px 1px 1px rgba(0,0,0,.5),0 0 1px rgba(13,13,13,.5);background:#ad2618;border-radius:25px;border:0 solid #010101}.volumeBar input[type=range]::-webkit-slider-thumb{box-shadow:0 0 6px #000000,0 0 0 #0d0d0d;border:.2px solid #000;height:25px;width:7px;border-radius:50px;background:#efd36b;cursor:grab;-webkit-appearance:none;margin-top:-11.1px}.volumeBar input[type=range]:focus::-webkit-slider-runnable-track{background:#de311f}.volumeBar input[type=range]::-moz-range-track{width:100%;height:2.8px;cursor:grab;box-shadow:1px 1px 1px rgba(0,0,0,.5),0 0 1px rgba(13,13,13,.5);background:#ad2618;border-radius:25px;border:0 solid #010101}.volumeBar input[type=range]::-moz-range-thumb{box-shadow:0 0 6px #000000,0 0 0 #0d0d0d;border:.2px solid #000;height:25px;width:7px;border-radius:50px;background:#efd36b;cursor:grab}.volumeBar input[type=range]::-ms-track{width:100%;height:2.8px;cursor:grab;background:transparent;border-color:transparent;color:transparent}.volumeBar input[type=range]::-ms-fill-lower{background:#7c1b11;border:0 solid #010101;border-radius:50px;box-shadow:1px 1px 1px rgba(0,0,0,.5),0 0 1px rgba(13,13,13,.5)}.volumeBar input[type=range]::-ms-fill-upper{background:#ad2618;border:0 solid #010101;border-radius:50px;box-shadow:1px 1px 1px rgba(0,0,0,.5),0 0 1px rgba(13,13,13,.5)}.volumeBar input[type=range]::-ms-thumb{box-shadow:0 0 6px #000000,0 0 0 #0d0d0d;border:.2px solid #000;height:25px;width:7px;border-radius:50px;background:#efd36b;cursor:grab;height:2.8px}.volumeBar input[type=range]:focus::-ms-fill-lower{background:#ad2618}.volumeBar input[type=range]:focus::-ms-fill-upper{background:#de311f}.seekBar input[type=range]{-webkit-appearance:none;width:99%;padding-bottom:10px;display:flex;background:none}.seekBar input[type=range]:focus{outline:none}.seekBar input[type=range]::-webkit-slider-runnable-track{width:100%;height:1.3px;cursor:pointer;box-shadow:0 0 0 rgba(0,0,0,0),0 0 0 rgba(13,13,13,0);background:linear-gradient(90deg,rgba(178,254,250,.8) 0%,rgba(14,210,247,1) 100%);border-radius:25px;border:0 solid rgba(1,1,1,0)}.seekBar input[type=range]::-webkit-slider-thumb{box-shadow:1px 1px 1px rgba(0,0,0,.44),0 0 1px rgba(13,13,13,.44);border:0 solid rgba(0,0,0,0);height:7px;width:7px;border-radius:50px;background:#efd36b;cursor:pointer;-webkit-appearance:none;margin-top:-2.85px}.seekBar input[type=range]:focus::-webkit-slider-runnable-track{background:linear-gradient(90deg,rgba(178,254,250,.8) 0%,rgba(14,210,247,1) 100%)}.seekBar input[type=range]::-moz-range-track{width:100%;height:1.3px;cursor:pointer;box-shadow:0 0 0 rgba(0,0,0,0),0 0 0 rgba(13,13,13,0);background:#d12e1d;border-radius:25px;border:0 solid rgba(1,1,1,0)}.seekBar input[type=range]::-moz-range-thumb{box-shadow:1px 1px 1px rgba(0,0,0,.44),0 0 1px rgba(13,13,13,.44);border:0 solid rgba(0,0,0,0);height:7px;width:7px;border-radius:50px;background:#efd36b;cursor:pointer}.seekBar input[type=range]::-ms-track{width:100%;height:1.3px;cursor:pointer;background:transparent;border-color:transparent;color:transparent}.seekBar input[type=range]::-ms-fill-lower{background:#270805;border:0 solid rgba(1,1,1,0);border-radius:50px;box-shadow:0 0 0 rgba(0,0,0,0),0 0 0 rgba(13,13,13,0)}.seekBar input[type=range]::-ms-fill-upper{background:#d12e1d;border:0 solid rgba(1,1,1,0);border-radius:50px;box-shadow:0 0 0 rgba(0,0,0,0),0 0 0 rgba(13,13,13,0)}.seekBar input[type=range]::-ms-thumb{box-shadow:1px 1px 1px rgba(0,0,0,.44),0 0 1px rgba(13,13,13,.44);border:0 solid rgba(0,0,0,0);height:7px;width:7px;border-radius:50px;background:#efd36b;cursor:pointer;height:1.3px}.seekBar input[type=range]:focus::-ms-fill-lower{background:#d12e1d}.seekBar input[type=range]:focus::-ms-fill-upper{background:#d12e1d}
